<resources>
    <string name="app_name">LavApp</string>
    <string name="to_mail">To</string>
    <string name="subject_mail">Subject</string>
    <string name="message_mail">Message</string>
    <string name="send_mail">Send</string>
    <string name="recibe">Quien Recibe:</string>
    <string name="direccion">Dirección:</string>
    <string name="ciudad">Ciudad:</string>
    <string name="barrio">Barrio:</string>
    <string name="guardar_servicio">Guardar Servicio</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Usuario Invalido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login falló"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="servicio">Nuevo Servicio</string>
    <string name="guardar_cliente">Guardar cliente</string>
    <string name="cliente">Nuevo Cliente</string>
    <string name="guardar_orden">Guardar Orden</string>
    <string name="orden">Nueva Orden</string>
    <string name="prendas">Listado de prendas</string>
    <string name="guardar_prendas">Guardar prendas</string>
    <string name="nombre_cliente">Nombre</string>
    <string name="apellidos_cliente">Apellidos</string>
    <string name="celular_cliente">Celular</string>
    <string name="email">Email</string>
    <string name="ni">Numero de identificacion</string>
    <string name="titulo">Bienvenidos a LavApp</string>
    <string name="buscar_servicio">Buscar Servicio</string>
    <string name="buscar_cliente">Buscar Cliente</string>
    <string name="descripcion_orden">Descripcion orden</string>
    <string name="fecha_de_entrega">Fecha de Entrega</string>
    <string name="valor_del_servicio">Valor del servicio</string>
    <string name="precio_prenda">Precio Prenda</string>
    <string name="cantidad">Cantidad</string>
    <string name="descripcion">Descripcion</string>
    <string name="titulo_seleccion">Escoja la acción que va a realizar</string>
    <string name="servicio_seleccion">Nuevo Servicio</string>
    <string name="listado_de_precios">Listado de precios</string>
    <string name="orden_seleccion">Nueva Orden</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bienvenue">Bienvenido</string>
    <string name="nanika">Nanika</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_de_quien_recibe">Nombre de quien Recibe</string>
    <string name="cliente_seleccion">Nuevo Cliente</string>
    <string name="email_cliente">Email</string>
    <string name="identificacion_cliente">Identificacion</string>
    <string name="prenda_seleccion">Nueva Prenda</string>
    <string name="descripcion_prenda">Descripcion</string>
    <string name="icono_principal">Icono Principal</string>
    <string name="bienvenido_nuevamente">Bienvenido Nuevamente</string>
    <string name="listado_de_clientes">Listado de Clientes</string>
    <string name="listado_de_prendas">Listado de prendas</string>
    <string name="listado_de_servicios">Listado de Servicios</string>
    <string name="todo">TODO</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="nuevo_cliente">Nuevo Cliente</string>
    <string name="nueva_prenda">Nueva Prenda</string>
    <string name="buscar_prenda">Buscar Prenda</string>
</resources>