<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    tools:context=".fragment.forms.FormClienteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">


        <TextView
            android:id="@+id/lbl_title_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente_seleccion"
            android:textColor="#004D40"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_guardar_cliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:pointerIcon="hand"
            android:text="@string/guardar_cliente"
            android:textColor="#263238"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="685dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btn_guardar_cliente"
            app:layout_constraintEnd_toEndOf="@+id/btn_guardar_cliente"
            app:layout_constraintTop_toBottomOf="@+id/lbl_title_cliente">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_nombre_cliente"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_cliente" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_apellido_cliente"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos_cliente" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_celular_cliente"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/celular_cliente" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email_cliente"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_cliente" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_id_cliente"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identificacion_cliente" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>